# palautusrepositorio

./: .gitignore  PULL.md  README.md
viikko1/nhl-statistics-1/src/: index.py  player_reader.py  statistics_service.py
viikko1/nhl-statistics-1/src/tests/: statistics_service_test.py
viikko2/nhl-reader/: pyproject.toml
viikko2/nhl-reader/src/: index.py  player.py  playerlist.py
viikko2/poetry-web/: pyproject.toml
viikko2/poetry-web/src/: index.py
viikko2/project-reader/: pyproject.toml
viikko2/project-reader/src/: project.py  project_reader.py
viikko2/test-project/: pyproject.toml
viikko3/hello-robot/: log.html  output.xml  report.html
viikko3/hello-robot/src/tests/: increase_counter.robot
viikko3/login-robot/: log.html  output.xml  report.html
viikko3/login-robot/src/services/: user_service.py
viikko3/login-robot/src/tests/: login.robot  register.robot  resource.robot
viikko3/web-login/: log.html  output.xml  report.html
viikko3/web-login/src/services/: user_service.py
viikko3/web-login/src/tests/: home.robot  login.robot  register.robot  resource.robot
viikko4/: retro.md
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/verkkokauppa/: pyproject.toml
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko5/int-joukko/src/: int_joukko.py
viikko5/laskin/src/: kayttoliittyma.py
viikko5/tennis/src/: tennis_game.py
viikko6/query-language/src/: index.py  matchers.py  query_builder.py
viikko7/: MERGE.md
